Closed Bug 894463 Opened 11 years ago Closed 11 years ago

Work around bug 894447 for now to unregress sunspider

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

(Whiteboard: [need review])

Attachments

(1 file)

Pending us making some progress on it...
Whiteboard: [need review]
Comment on attachment 776487 [details] [diff] [review]
Go back to deoptimizing vanilla objects and arrays more eagerly to unregress ss-tagcloud.

Review of attachment 776487 [details] [diff] [review]:
-----------------------------------------------------------------

::: js/src/jsinferinlines.h
@@ +976,3 @@
>          TypeObject* type = obj->type();
> +        if (!obj->is<JSObject>() && !obj->is<ArrayObject>() &&
> +            type->getPropertyCount() < 8)

Nit: {} around the return
Attachment #776487 - Flags: review?(bhackett1024) → review+
https://hg.mozilla.org/mozilla-central/rev/2e83cb397057
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: