Bug 894463.  Go back to deoptimizing vanilla objects and arrays more eagerly to unregress ss-tagcloud.  r=bhackett