js/src/jsinferinlines.h
@@ -970,9 +970,14 @@ TypeScript::MonitorAssign(JSContext *cx, HandleObject obj, jsid id)
         // But if we don't have too many properties yet, don't do anything.  The
         // idea here is that normal object initialization should not trigger
         // deoptimization in most cases, while actual usage as a hashmap should.
+        // Except for vanilla objects and arrays work around bug 894447 for now
+        // by deoptimizing more eagerly.  Since in those cases we often have a
+        // pc-keyed TypeObject, this is ok.
         TypeObject* type = obj->type();
-        if (type->getPropertyCount() < 8)
+        if (!obj->is<JSObject>() && !obj->is<ArrayObject>() &&
+            type->getPropertyCount() < 8) {
             return;
+        }
         MarkTypeObjectUnknownProperties(cx, type);
     }
 }
